variables.RunHalf.scala.code
var b = 0
var c = 0
var t = 2 * b - c - 1
while (t=0) {
  avance()
  if (estSurOrange) {
    c=c+1
  }
  if (estSurBiscuit) {
    b=b+1
  }
}